      Made food buyable in all town markets.
   -- Made it so that shield items didn't need to be PREPARED in a game with
      USE_PREPARE_COMMAND set and verified that non-prepared items got
	  returned.
   -- Fixed display of hits/regen to show unit number and creature in unit
      which took the damage.
   -- Fixed bug in magic studying in protected buildings under LIMITED_MAGES
      case as reported by Vitauts Stochka <vit@dau.lv>
   -- Fixed empty object bug reported by Vitauts Stochka <vit@dau.lv>
   -- Added unit weight/capacity patch from Ales Privetivy <ales@ucw.cz>
   -- Added patch from Jan Rietema <ravanrooke@yahoo.de> to conditionally
      prevent ships from sailing through single-hex land-masses.
   -- Fixed a bug in the cross-level teleport stuff (if allowed) which caused
      the penalty to be a flat value rather than per difference in level.
   -- Fixed a bug in teleport and such which allowed entry into and out of
      the Abyss (and viewing it via farsight and such).  Bad JT, no biscuit.
      Thanks AZ for pointing it out.

Changes from 4.0.10 -> 5.0.0
--------------------------------------------------
   -- Fixed brokeness in conquest map generation caused by terrain patch
   -- Fixed potential namespace conflict on 'fill' from template.cpp
   -- Changed function of TEMPLATE order, as well as report format:
      the TEMPLATE order information is now stored with the other faction
      details (like TIMES), in the "players" file, like so:
      Template: {off|short|long|map}
      It is left to the server to handle this item (much like the
      "SendTimes:" item in the "players" file).  During turn run, there will
      be two files produced for each faction ID:  report.ID, and template.ID .
      In cases where "off" was chosen, a "short" report will be produced
      for the faction (thus allowing your server to propagate a set of
      orders automatically [if you do that sort of thing] to the next
      turn).