@@ -175,6 +175,10 @@
       contexts -- such as horsemen in a stable or farmers in a farm]
       [This would probably be new buildings rather than the existing ones
       since total produce boosters are useful as well]
+   -- Consider a tracking skill (contested by stealth or by a new skill?)
+      which would allow a tracker to see information like whether a unit
+      was deliberately revealing information, who that unit gave things too,
+      which direction that unit moved, etc.
 
 ** Spells/Magic
    -- Add more items so that apprentices are actually useful. [Tom suggested
