@@ -59,10 +59,15 @@ void doneIO()
 
 int getrandom(int range)
 {
-    if (!range) return 0;
-    unsigned long i = isaac_rand( &isaac_ctx );
-    i = i % range;
-    return (int) i;
+	int neg = (range < 0);
+	if (!range) return 0;
+	int ret = 0;
+	if (neg) range = -range;
+	unsigned long i = isaac_rand( &isaac_ctx );
+	i = i % range;
+	if (neg) ret = (int)(i*-1);
+	else ret = (int)i;
+	return ret;
 }
 
 void seedrandom(int num)
